# nlm

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.claude/: settings.local.json
.github/workflows/: ci.yml  release-please.yml  release.yml
agents/: repo-specialist.agent.md
src/: cli.rs  config.rs  main.rs  pptx.rs
src/adapters/: confluence.rs  file.rs  mod.rs  notion.rs  url.rs
src/commands/: mod.rs
src/notebooklm/: auth.rs  client.rs  mod.rs  rpc.rs
